--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cool Pizzas</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
@@ -18,23 +18,7 @@
             </div>
         </div>
     </div>
-    <script>
-        var resultPanel =
-            document.getElementById("pizzaResult");
-            var pizzaButton = document.getElementById("getPizzaButton")
-
-        function getPizza() {
-            fetch('http://localhost:5001/pizza')
-                .then(r => {
-                    r.json()
-                        .then(c => resultPanel.innerText = c)
-                        .catch(c => console.log(c));
-                })
-                .catch(r => console.log)
-        }
-
-        pizzaButton.addEventListener('click', getPizza)
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
